# SimSpeedStar

./: .gitignore  Dockerfile  Readme.md  docker-compse.yml  pyproject.toml  version.json
.codesandbox/: tasks.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
app/: app.py  index.py  requirements.txt
app/apps/: AdminPage.py  HiddenPage.py  KnownPopulation.py  MatchStick.py  SimSpeedStar.py  locationAnalysis.py  locationsDetail.py  matchstick.py  page_3.py  stakeholder.py  status.py
app/apps/data/: etl_check.py  locations_check.py  metrics.py
app/apps/elements/: admin_navbar.py  hidden_navbar.py  mapping_card_content.py  navbar.py  plan.py  stake_navbar.py  status_components.py
app/assets/: main.css
app/routines/: connection.py
