[project]
name = "simspeedstar"
version = "0.1.0"
description = "Racing App"
authors = [
    {name = "Nick Polliard"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "dash (>=3.0.2,<4.0.0)",
    "dash-bootstrap-components (>=2.0.0,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "dash-daq (>=0.6.0,<0.7.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "dash-player (>=1.1.0,<2.0.0)",
    "beautifulsoup4 (>=4.13.3,<5.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "lxml (>=5.3.2,<6.0.0)",
    "dash-html-components (>=2.0.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
